k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: housing-predict
  labels:
    app: housing-predict
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pod-housing-predict
  template:
    metadata:
      labels:
        app: pod-housing-predict
    spec:
      containers:
      - name: pod-housing-predict
        image: gcr.io/enhanced-kiln-451309-q8/housing-predict-api
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "0.5G"
            cpu: "0.5"
          limits:
            memory: "1G"
            cpu: "1"
