k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: housing-predict-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: pod-housing-predict
